# crwler

./: LICENSE  README.md
.ipynb_checkpoints/: setup_crwler-checkpoint.sh
Crwler/: LICENSE  README.md  pyproject.toml  requirements.txt
Crwler/src/: crwler.py  utilities.py
Crwler/src/crwler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
Crwler/tests/: test_crwler.py  test_utilities.py
